--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 POSTGRES_DB=kittygram
 POSTGRES_USER=kittygram_user
 POSTGRES_PASSWORD=kittygram_password
-DB_NAME=kittygram
+# Добавляем переменные для Django-проекта:
+DB_HOST=db
+DB_PORT=5432
+SECRET_KEY=secret_key
+ALLOWED_HOSTS='127.0.0.1','localhost','you_domen'
+DEBUG=False
