--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
+# Переменные для базы данных:
 POSTGRES_DB=kittygram
 POSTGRES_USER=kittygram_user
 POSTGRES_PASSWORD=kittygram_password
-# Добавляем переменные для Django-проекта:
+DB_NAME=kittygram
+# для Django-проекта:
 DB_HOST=db
 DB_PORT=5432
 SECRET_KEY=secret_key
-ALLOWED_HOSTS='127.0.0.1','localhost','you_domen'
+ALLOWED_HOSTS="'***.*.*.*','127.0.0.1','localhost','you_domen'"
 DEBUG=False
+# для Docker:
+BACKEND_PORT=9000
+HTTP_PORT=80
+DOCKER_USERNAME=dockerhub_username
+APPLICATION_NAME=kittygram
