--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - pg_data:/var/lib/postgresql/data
   backend:
     build: ./backend/
+    restart: unless-stopped
     env_file: .env
     volumes:
       - static:/backend_static/
@@ -27,8 +28,9 @@ services:
       - static:/frontend_static
   gateway:
     build: ./nginx/
+    restart: unless-stopped
     ports:
-      - 9000:80
+      - "${BACKEND_PORT}:${HTTP_PORT}"
     volumes:
       - static:/static
       - media:/media
