--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DB_NAME=kittygram
 DB_HOST=db
 DB_PORT=5432
 SECRET_KEY=secret_key
-ALLOWED_HOSTS="'***.*.*.*','127.0.0.1','localhost','you_domen'"
+ALLOWED_HOSTS="***.*.*.*,127.0.0.1,localhost,you_domen"
 DEBUG=False
 # для Docker:
 BACKEND_PORT=9000
