--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,4 +10,6 @@ RUN pip install -r requirements.txt --no-cache-dir
 
 COPY . .
 
-CMD ["gunicorn", "--bind", "0.0.0.0:9000", "kittygram_backend.wsgi"]
+RUN apt update && apt install -y make
+
+CMD make run
